Small topbar and footer tweaks

--- a/app/styles/components/app-footer.scss
+++ b/app/styles/components/app-footer.scss
@@ -3,14 +3,15 @@
   height: $footer-height;
   border-top: 1px solid $medium-gray;
   color: $dark-gray;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   box-sizing: border-box;
   padding: 1rem 0;
 
   .app-footer-content {
     max-width: 800px;
     margin: 0 auto;
-    column-count: 3;
+    background-color: $light-gray;
+    column-count: 2;
     column-rule: 1px solid $medium-gray;
     column-gap: 3rem;
 
@@ -20,6 +21,7 @@
 
     li {
       list-style-type: none;
+      padding: 0.2em 0;
 
       a, span {
         display: block;
