Correct footer OOR link

--- a/app/templates/components/app-footer.hbs
+++ b/app/templates/components/app-footer.hbs
@@ -1,7 +1,7 @@
 <div local-class="app-footer-content">
 <ul>
   <li><span>© 2012-2016 Universität Magdeburg and Universität Bremen</span></li>
-  <li><a href="http://ontolog.cim3.net/cgi-bin/wiki.pl?OpenOntologyRepository">Open Ontology Repository (OOR) Initiative</a></li>
+  <li><a href="http://ontologforum.org/index.php/OpenOntologyRepository">Open Ontology Repository (OOR) Initiative</a></li>
   <li><a href="http://wiki.ontohub.org">About</a></li>
   <li><a href="https://github.com/ontohub">GitHub</a></li>
 </ul>
