--- a/app/styles/components/top-route-header.scss
+++ b/app/styles/components/top-route-header.scss
@@ -1,4 +1,4 @@
-.top-route-header {
+:global(.top-route-header) {
   background-color: $light-gray;
   border-bottom: 1px solid $medium-gray;
   padding-top: 1rem;
