--- a/app/styles/components/top-bar.scss
+++ b/app/styles/components/top-bar.scss
@@ -2,11 +2,11 @@
   background-color: $topbar-background;
 
   :global(.top-bar) {
-    max-width: 800px;
-    margin: 0 auto;
     color: $light-gray;
     height: $topbar-height;
-    padding: 0.5rem 0;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: .5rem 0;
   }
 
   a {
@@ -16,19 +16,19 @@
   h1 {
     font-size: 1.5rem;
     font-weight: bold;
-    margin: 0;
     height: 3rem;
-    margin-top: 0.4rem;
+    margin: 0;
+    margin-top: .4rem;
 
     &::before {
-      width: 3rem;
-      height: 3rem;
-      margin-top: -0.4rem;
+      background: url('/assets/ontohub.svg');
       content: ' ';
       display: inline-block;
-      margin-right: 0.5em;
-      background: url('/assets/ontohub.svg');
+      height: 3rem;
+      margin-right: .5em;
+      margin-top: -.4rem;
       vertical-align: middle;
+      width: 3rem;
     }
   }
 }
