--- a/app/styles/components/top-route-header.scss
+++ b/app/styles/components/top-route-header.scss
@@ -1,34 +1,34 @@
 .top-route-header {
   background-color: $light-gray;
-  padding-top: 1rem;
   border-bottom: 1px solid $medium-gray;
+  padding-top: 1rem;
 
   .content {
-    max-width: 800px;
     margin: 0 auto;
+    max-width: 800px;
   }
 
   :global(.tabs) {
     background-color: transparent;
-    border: none;
-    margin-top: 2rem;
+    border: 0;
     margin-bottom: -1px;
+    margin-top: 2rem;
 
     :global(.tabs-title) a {
-      box-sizing: border-box;
       border: 1px solid transparent;
       border-bottom: 0;
+      box-sizing: border-box;
+      color: $secondary-color;
       font-size: 1rem;
       padding: 1em 2em;
-      color: $secondary-color;;
 
       &:hover {
         background-color: $medium-gray;
       }
 
       &[aria-selected='true'] {
-        border-color: $medium-gray;
         background-color: $white;
+        border-color: $medium-gray;
         color: $black;
       }
     }
