Style tweaks and number badges

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -9,10 +9,41 @@
 
 :global(.page-content) {
   margin: 0 auto;
+  padding-top: 2rem;
   max-width: 800px;
   padding-top: 2rem;
 }
 
+:global(.hollow.badge) {
+  background: transparent;
+  border: 1px solid $primary-color;
+  color: $primary-color;
+  min-width: 1.8em;
+  border-radius: 1em;
+}
+
 :global(.vertical.tabs) {
   margin-right: -1px;
+  margin-right: 1rem;
+
+  a {
+    padding: 1em;
+    transition: 0.2s all;
+    &:focus, &[aria-selected='true'] {
+      font-weight: bold;
+      background: transparent;
+
+      :global(.hollow.badge) {
+        background: $primary-color;
+        color: $white;
+      }
+    }
+  }
+  li:not(:last-of-type) {
+    border-bottom: 1px solid $light-gray;
+  }
+}
+
+:global(.tabs-content) {
+  border: 1px solid $light-gray;
 }
