Create a welcome page

--- a/app/styles/components/top-route-header.scss
+++ b/app/styles/components/top-route-header.scss
@@ -16,6 +16,11 @@
     }
   }
 
+  ul {
+    list-style-type: none;
+    margin-left: 0;
+  }
+
   :global(.tabs) {
     background-color: transparent;
     border: 0;
