--- a/app/styles/components/app-footer.scss
+++ b/app/styles/components/app-footer.scss
@@ -8,10 +8,11 @@
   padding: 1rem 0;
 
   .app-footer-content {
+    padding: 0 1rem 1rem 1rem;
     background-color: $light-gray;
-    column-count: 2;
     column-gap: 3rem;
     column-rule: 1px solid $medium-gray;
+    column-width: calc(400px - 2.5rem);
     margin: 0 auto;
     max-width: 800px;
 
