Make labels in repo new clickable.

--- a/app/styles/components/radio-choice.scss
+++ b/app/styles/components/radio-choice.scss
@@ -1,6 +1,7 @@
 .radio-choice {
+  vertical-align: middle;
   i {
-    float: left;
+    //float: left;
     font-size: 2.5em;
     margin-right: 10px;
     margin-bottom: -12px;
