--- a/app/styles/components/inline-edit.scss
+++ b/app/styles/components/inline-edit.scss
@@ -1,9 +1,9 @@
 .inline-edit {
   span:hover::before {
-    content: "\f040";
-    font-family: "FontAwesome";
-    position: absolute;
-    margin-left: -1rem;
     color: $dark-gray;
+    content: '\f040';
+    font-family: 'FontAwesome';
+    margin-left: -1rem;
+    position: absolute;
   }
 }
