--- a/app/styles/components/top-route-header.scss
+++ b/app/styles/components/top-route-header.scss
@@ -12,9 +12,9 @@
   }
 
   h1 {
-    @each $size, $headers in $header-sizes {
+    @each $size, $styles in $header-styles {
       @include breakpoint($size) {
-        font-size: rem-calc(map-get($headers, 'h3'));
+        font-size: rem-calc(map-get(map-get($styles, 'h3'), 'font-size'));
       }
     }
   }
