19 create a search result page (#22)
* Create search result page

* Fix top bar hierarchy and add search link

* Add slight transition to top level route header text

* Don't use mirage in development mode

* Obey eslint

* Style tweaks and number badges

* Obey hound

* Tweaks

* Create user model

* Remove unnecessary quotes

* Extend search result

* Integrate repository routes

* Use correct lock symbol

* Obey hound

* Fix foundation change

* Remove all namespace related files

* Replace namespace with organizational unit

* Fix tests

* Fix radio buttons on new repository page

* Move remaining namespace stylesheets and add autoprefixer

* Match search page to new backend API

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -12,3 +12,51 @@
   max-width: 800px;
   padding-top: 2rem;
 }
+
+:global(.hollow.badge) {
+  background: transparent;
+  border: 1px solid $primary-color;
+  border-radius: 1em;
+  color: $primary-color;
+  min-width: 1.8em;
+}
+
+:global(.vertical.tabs) {
+  margin-right: 1rem;
+
+  a {
+    padding: 1em;
+    transition: .2s all;
+
+    &:focus {
+      background: transparent;
+    }
+
+    &:global(.active) {
+      background: transparent;
+      font-weight: bold;
+
+      :global(.hollow.badge) {
+        background: $primary-color;
+        color: $white;
+      }
+    }
+  }
+
+  li:not(:last-of-type) {
+    border-bottom: 1px solid $light-gray;
+  }
+}
+
+:global(.tab-content) {
+  border: 1px solid $light-gray;
+  padding: 1rem;
+
+  h1 {
+    @each $size, $styles in $header-styles {
+      @include breakpoint($size) {
+        font-size: rem-calc(map-get(map-get($styles, 'h5'), 'font-size'));
+      }
+    }
+  }
+}
