--- a/app/styles/components/app-footer.scss
+++ b/app/styles/components/app-footer.scss
@@ -9,11 +9,12 @@
 
   .app-footer-content {
     background-color: $light-gray;
-    column-count: 2;
     column-gap: 3rem;
     column-rule: 1px solid $medium-gray;
+    column-width: calc(400px - 2.5rem);
     margin: 0 auto;
     max-width: 800px;
+    padding: 0 1rem 1rem;
 
     ul {
       margin: 0;
