--- a/app/styles/components/top-bar.scss
+++ b/app/styles/components/top-bar.scss
@@ -89,9 +89,17 @@
       z-index: 0;
     }
 
+    > li > a, > li > span {
+      padding: .5em 1em;
+    }
+
+    > li > hr {
+      padding: 0;
+      margin: 0.5em 0;
+    }
+
     a {
       color: $black;
-      padding: .5em 1em;
       z-index: 9;
 
       &:hover {
@@ -102,8 +110,8 @@
   }
 
   :global(form#login) {
+    margin: .5em 1em;
     width: auto;
-    margin: 0.5em;
 
     input {
       width: 250px;
@@ -119,5 +127,12 @@
       background-color: transparent;
       color: $primary-color;
     }
+  }
+
+  img {
+    width: 24px;
+    height: 24px;
+    margin-bottom: -4px;
+    margin-top: -4px;
   }
 }
