--- a/app/styles/components/top-bar.scss
+++ b/app/styles/components/top-bar.scss
@@ -127,6 +127,17 @@
       background-color: transparent;
       color: $primary-color;
     }
+
+    :global(div.loading) {
+      position: absolute;
+      background-color: rgba(255,255,255,0.5);
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      text-align: center;
+      line-height: 10em;
+    }
   }
 
   img {
