Add links to universities to footer

--- a/app/styles/components/app-footer.scss
+++ b/app/styles/components/app-footer.scss
@@ -24,10 +24,16 @@
       list-style-type: none;
       padding: .2em 0;
 
-      a,
+      > * {
+        display: block;
+      }
+
       span {
         color: $dark-gray;
-        display: block;
+      }
+
+      a {
+        color: darken($dark-gray, 20%);
       }
     }
   }
