Obey style checks

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,7 @@
 @import 'settings';
 
+$transparent-white: rgba(255, 255, 255, .5);
+
 $global-flexbox: true;
 
 @import 'foundation-sites/foundation';
