--- a/app/styles/components/top-bar.scss
+++ b/app/styles/components/top-bar.scss
@@ -89,13 +89,14 @@
       z-index: 0;
     }
 
-    > li > a, > li > span {
+    > li > a,
+    > li > span {
       padding: .5em 1em;
     }
 
     > li > hr {
+      margin: .5em 0;
       padding: 0;
-      margin: 0.5em 0;
     }
 
     a {
@@ -114,9 +115,9 @@
     width: auto;
 
     input {
-      width: 250px;
-      max-width: inherit;
       margin-right: 0;
+      max-width: inherit;
+      width: 250px;
     }
 
     a {
@@ -129,21 +130,21 @@
     }
 
     :global(div.loading) {
-      position: absolute;
-      background-color: rgba(255,255,255,0.5);
-      width: 100%;
+      background-color: $transparent-white;
       height: 100%;
-      top: 0;
       left: 0;
-      text-align: center;
       line-height: 10em;
+      position: absolute;
+      text-align: center;
+      top: 0;
+      width: 100%;
     }
   }
 
   img {
-    width: 24px;
     height: 24px;
     margin-bottom: -4px;
     margin-top: -4px;
+    width: 24px;
   }
 }
