--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -1,3 +1,34 @@
+@mixin list-item {
+  min-height: 4rem;
+
+  &:not(:last-of-type) {
+    border-bottom: 1px solid $light-gray;
+    margin-bottom: 1em;
+  }
+
+  > *:last-child {
+    margin-bottom: 1rem;
+  }
+
+  h1 {
+    @each $size, $styles in $header-styles {
+      @include breakpoint($size) {
+        font-size: rem-calc(map-get(map-get($styles, 'h5'), 'font-size'));
+      }
+    }
+  }
+
+  p {
+    color: $dark-gray;
+  }
+
+  &:last-of-type {
+    p {
+      margin-bottom: 0;
+    }
+  }
+}
+
 :global(.page-wrapper) {
   box-sizing: border-box;
   margin: 0 auto;
@@ -11,6 +42,19 @@
   margin: 0 auto;
   max-width: 800px;
   padding-top: 2rem;
+}
+
+:global(.icon) {
+  display: inline-block;
+  height: 3.5rem;
+  margin-bottom: -1rem;
+  margin-right: .6rem;
+  width: 3.5rem;
+
+  :global(&.fa) {
+    font-size: 3rem;
+    vertical-align: top;
+  }
 }
 
 :global(.badge) {
