Add and use component validated-input-field.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,3 +6,6 @@ $global-flexbox: true;
 
 @import 'foundation-sites/foundation';
 @include foundation-everything(true);
+
+@import 'form-success';
+@include foundation-form-success;
