--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -112,3 +112,25 @@
 :global(img.avatar) {
   border-radius: .25rem;
 }
+
+:global(h1#error-title) {
+  $error-font-color: #999;
+  color: $error-font-color;
+  margin-top: 30vh;
+  text-align: center;
+}
+
+:global(p#error-description) {
+  text-align: center;
+}
+
+:global(ul#error-links) {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+
+  li {
+    display: inline-block;
+    padding: .5em;
+  }
+}
